overview prices issues with text wrapping v5.0

--- a/src/app/prices/overview-prices/overview-prices.component.css
+++ b/src/app/prices/overview-prices/overview-prices.component.css
@@ -46,6 +46,8 @@
 
 .table-with-dates-date-cell {
   padding-right: 10px;
+  -webkit-padding-start: 10px;
+
 }
 
 .table-with-prices-price-cell {
